tests/parser/bad/stmts_t-match-spid-with-bar-with.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

(* Typo double underscore *)
transition arbitrary ()
  match a with
  | __ => accept
  end
end
